# TrustTunnelClient-Arch

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist  PKGBUILD  README.md  com.trusttunnel.client.plist  com.trusttunnel.tray.plist  install.sh  make-dist.sh  trusttunnel-agent.policy  trusttunnel-tray.desktop  trusttunnel.rules  trusttunnel.service
.github/workflows/: ci.yml  release.yml
src/: TrayAgent.cpp  TrayAgent.h  main.cpp
tools/: convert_v2ray_to_tt.py  howto-convert-v2ray-to-trusttunnel.txt  update_steam_direct.py
